# rarexsec-analysis

./: .build.sh  .container.sh  .editorconfig  .gitignore  .setup.sh  AGENTS.md  AnalysisRunner.h  AnalysisSpace.h  Binning.h  CMakeLists.txt  ConfigurationManager.h  DataLoader.h  DataManager.h  DataSaver.h  DataTypes.h  DatasetLoader.h  DatasetProcessing.h  DefinitionManager.h  Dockerfile  EventCategories.h  EventCategory.h  Histogram.h  HistogramGenerator.h  LinkDef.h  ModelInferer.h  PipelineRunner.cpp  README.md  RunEventDisplay.h  RunHistGenerator.h  RunPlotter.h  SampleLoader.h  SampleTypes.h  Selection.h  Systematics.h  SystematicsController.h  Utilities.h  VariableManager.h  analyse.cpp  analyse_strategy.md  analyse_test.cpp  (+48 more)
analysis/: CMakeLists.txt  analyse_bdt_model.cpp  analyse_blips.cpp  analyse_numu_cc.cpp  analyse_selection.cpp  analyse_signal.cpp  analyse_vertex.cpp  calculate_analysis.txt  display_numu_cc.cpp  efficiency_analysis.cpp  event_displays.cpp  numucc_analysis.cpp  numucc_snapshot.cpp  plot_analysis.cpp  signal_correlation_analysis.cpp  snapshot_numu_cc.cpp  train_bdt_model.cpp  visualise_topo.cpp
framework/: AnalysisChannels.h  AnalysisFramework.h  AnalysisResult.h  AnalysisRunner.h  AnalysisSpace.h  AnalysisWorkflow.h  BDTManager.h  Binning.h  CMakeLists.txt  ChannelManager.h  ConfigurationManager.h  CorrelationManager.h  DataManager.h  DataTypes.h  DefinitionManager.h  EventCategories.h  EventCategoriser.h  EventDisplay.h  EventProcessor.h  Histogram.h  HistogramCategoriser.h  HistogramGenerator.h  LinkDef.h  Logger.h  ParticleCategoriser.h  PlotBase.h  PlotEfficiency.h  PlotManager.h  PlotRatio.h  PlotStacked.h  PlotSysBreakdown.h  PlotSysCorrelation.h  PlotSysVariations.h  PlotSystematics.h  PlotVarCorrelation.h  Selection.h  SelectionManager.h  Systematics.h  SystematicsController.h  SystematicsManager.h  (+2 more)
libapp/: AnalysisCallbackDispatcher.h  AnalysisDefinition.h  AnalysisDispatcher.h  AnalysisKey.h  AnalysisPluginManager.h  AnalysisResult.h  AnalysisRunner.h  BinnedHistogram.h  CMakeLists.txt  CutFlowCalculator.h  DataProcessor.h  HistogramBuilderFactory.h  HistogramPolicy.h  HistogramUncertainty.h  IAnalysisPlugin.h  ISampleProcessor.h  MonteCarloProcessor.h  RegionAnalysis.h  RegionHandle.h  RegionsPlugin.cpp  RegionsPlugin.h  SampleProcessorFactory.h  Selection.h  SelectionQuery.h  SelectionRegistry.h  StackedHistogramPlugin.cpp  StackedHistogramPlugin.h  VariableHandle.h  VariableProcessor.h  VariableResult.h  VariablesPlugin.cpp  VariablesPlugin.h
libplg/: CMakeLists.txt  RegionsPlugin.cpp  StackedHistogramPlugin.h
libplot/: CMakeLists.txt  DetectorDisplay.h  EventDisplay.h  HeatmapPlot.h  HistogramCut.h  HistogramPlotterBase.h  IEventDisplay.h  IHistogramPlot.h  MatrixPlot.h  OccupancyMatrixPlot.cpp  OccupancyMatrixPlot.h  PerformancePlot.h  PlotCatalog.h  RocCurvePlot.cpp  RocCurvePlot.h  RunPeriodNormalizationPlot.h  SelectionEfficiencyPlot.cpp  SelectionEfficiencyPlot.h  SemanticDisplay.h  SignificanceImprovementPlot.h  SlipStackingIntensityPlot.h  StackedHistogramPlot.cpp  StackedHistogramPlot.h  SystematicBreakdownPlot.cpp  SystematicBreakdownPlot.h  UnstackedHistogramPlot.cpp  UnstackedHistogramPlot.h
libplug/: AnalysisPluginManager.h  CMakeLists.txt  CutFlowPlotPlugin.cc  CutFlowPlotPlugin.h  EventDisplayPlugin.cc  EventDisplayPlugin.cpp  EventDisplayPlugin.h  FlashValidationPlugin.cc  FlashValidationPlugin.h  HeatmapPlugin.cpp  HeatmapPlugin.h  IAnalysisPlugin.h  IPlotPlugin.h  ISystematicsPlugin.h  OccupancyMatrixPlugin.cc  OccupancyMatrixPlugin.cpp  OccupancyMatrixPlugin.h  PipelineRunner.h  PlotPluginManager.h  PluginAliases.h  PluginArgs.h  PluginConfigValidator.h  PluginFactory.cpp  PluginHost.h  PluginSpec.h  RegionsPlugin.cc  RegionsPlugin.cpp  RegionsPlugin.h  RocCurvePlugin.cc  RocCurvePlugin.cpp  RocCurvePlugin.cxx  RocCurvePlugin.h  RunPeriodNormalizationPlugin.cc  RunPeriodNormalizationPlugin.h  SelectionEfficiencyPlugin.cpp  SelectionEfficiencyPlugin.cxx  SelectionEfficiencyPlugin.h  SlipStackingIntensityPlugin.cc  SlipStackingIntensityPlugin.h  SnapshotPlugin.cc  (+15 more)
libplug/analysis/: EventDisplayPlugin.cc  RegionsPlugin.cc  SnapshotPlugin.cc  VariablesPlugin.cc
libplug/analytics/: RegionsPlugin.cc  SnapshotPlugin.cc  VariablesPlugin.cc
libplug/plot/: CutFlowPlotPlugin.cc  CutMatrixPlotPlugin.cc  EventDisplayPlugin.cc  FlashValidationPlugin.cc  OccupancyMatrixPlugin.cc  RocCurvePlugin.cc  RunPeriodNormalizationPlugin.cc  SlipStackingIntensityPlugin.cc  StackedHistogramPlugin.cc  SystematicBreakdownPlugin.cc  UnstackedHistogramPlugin.cc
libplug/plotting/: CutFlowPlotPlugin.cc  CutMatrixPlotPlugin.cc  EventDisplayPlugin.cc  PerformancePlotPlugin.cc  RocCurvePlugin.cc  SlipStackingIntensityPlugin.cc  StackedHistogramPlugin.cc  SystematicBreakdownPlugin.cc  UnstackedHistogramPlugin.cc
libplug/systematics/: StrategySelectionPlugin.cc
src/: CMakeLists.txt
src/analysis/: analysis_runner_example.cpp  pipeline_runner_example.cpp
src/app/: CMakeLists.txt
src/core/: CMakeLists.txt
src/data/: CMakeLists.txt
src/hist/: CMakeLists.txt
src/plot/: CMakeLists.txt
src/plug/: CMakeLists.txt
src/presets/: Presets_Plots.cpp  Presets_Standard.cpp  Presets_Vertices.cpp
src/run/: CMakeLists.txt  study_all.cpp  study_neutrino_energy.cpp  study_neutrino_vertex.cpp  study_numucc_selection.cpp  (+5 more)
studies/: CMakeLists.txt  study_all.cpp  study_topo_score.cpp
tests/: CMakeLists.txt  histogram_property_tests.cpp  histogram_uncertainty_tests.cpp  stacked_histogram_underflow_overflow.cpp  stacked_histogram_uniform_binning.cpp  test_cut_flow_preset.cpp  test_cut_flow_summary.cpp  test_dynamic_binning.cpp  test_dynamic_binning_2d.cpp  test_event_display_preset.cpp  test_histogram_uncertainty.cpp  test_monte_carlo_processor.cpp  test_pipeline_builder.cpp  test_quadtree_binning.cpp  test_quadtree_binning_2d.cpp  test_sample_processing.py  test_stacked_histogram_underflow_overflow.cpp  test_stacked_histogram_uniform_binning.cpp  test_stacked_log_preset.cpp  test_systematics.cpp  test_topological_score_preset.cpp
(+310 files in other folders)
